--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,11 +7,13 @@
     tools:context=".HomeActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/txtTest"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerInParent="true"
         android:text="Blue Page"
-        android:textSize="40sp"
+        android:textSize="20sp"
         android:textStyle="bold"/>
 
 </RelativeLayout>
